--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -3,10 +3,10 @@ packages:
   - name: "db"
     path: "./db/sqlc"
     schema: "./db/migration/"
-    queries: "./db/migration/query"
+    queries: "./db/query"
     engine: "postgresql"
     emit_json_tags: true
     emit_prepared_queries: false
     emit_interface: false
-    emit_exact_table_names: true 
-    # accounts table --> Accounts struct 
+    emit_exact_table_names: true
+    # accounts table --> Accounts struct
