--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,24 +2,36 @@ name: ci-test
 
 on:
   push:
-    branches: [ "github-action" ]
+    branches: ["github-action"]
   pull_request:
-    branches: [ "github-action " ]
+    branches: ["github-action "]
 
 jobs:
-
   test:
     name: Test
     runs-on: ubuntu-latest
-    steps:    
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: simple_bank
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v4
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.20"
 
-    - name: Test
-      run: make test
+      - name: Test
+        run: make test
