--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,14 +33,14 @@ jobs:
         with:
           go-version: "1.20"
 
-      - name: Run migrations
-        run: make migrateup
-
       - name: Install Golang-Migrate
         run: |
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.1/migrate.linux-amd64.tar.gz | tar xvz
-          sudo mv migrate.linux-amd64 /usr/bin/
+          sudo mv migrate.linux-amd64 /usr/bin/migrate
           which migrate
+
+      - name: Run migrations
+        run: make migrateup
 
       - name: Test
         run: make test
