changed to mian branch

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,9 @@ name: ci-test
 
 on:
   push:
-    branches: ["github-action"]
+    branches: ["main"]
   pull_request:
-    branches: ["github-action "]
+    branches: ["main"]
 
 jobs:
   test:
